desktop.css
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

body {
  background-color: #260808;
  display: flex;
  flex-direction: column;
  row-gap: 90px;
}

.section-grid {
  max-width: 1192px;
  width: 100%;
  display: grid;
  grid-template-columns: repeat(12, 1fr);
  gap: 32px;
  margin-inline: auto;
}

#header {
  margin-top: 40px;
}

.header-content {
  grid-column: 1/13;
  display: flex;
  justify-content: space-between;
  align-items: center;
}

.logo {
  font-size: 32px;
  color: #ededed;
}

body {
  background-color: #260808;
}

.footer {
  justify-content: center;
  text-align: center;
  display: flex;
  align-items: center;
  width: 100%;
  margin-bottom: 40px;
}

.about-content {
  align-items: center;
  display: flex;
  flex-direction: column;
  gap: 24px;
  width: 100%;
  justify-content: center;
  grid-column: 1/13;
}

.about-content p {
  text-align: center;
  width: 80%;
}

.why-section {
  align-items: center;
  display: flex;
  justify-content: center;
  flex-direction: column;
  gap: 32px;
}

.card {
  padding: 24px;
  display: flex;
  flex-direction: column;
  gap: 24px;
  border-radius: 12px;
  grid-column: span 4;
}

.hero-content {
  background-image: url("images/bg.jpg");
  background-size: cover;
  grid-column: 1/13;
  width: 100%;
  display: flex;
  flex-direction: column;
  gap: 32px;
  justify-content: center;
  align-items: center;
  height: 650px;
  margin-top: -50px;
}

.hero-content h1 {
  text-align: center;
  width: 80%;
}

#watchlist {
  align-items: center;
  display: flex;
  justify-content: center;
  flex-direction: column;
  gap: 36px;
}

.movie-card {
  display: flex;
  flex-direction: column;
  gap: 24px;
  border-radius: 12px;
  grid-column: span 4;
  align-items: center;
}

.movie-img {
  display: block;
  width: 100%;
  border-radius: 12px;
  height: 400px;
}

